fix work spacing

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -6,8 +6,11 @@
   width: 100%;
   height: 300px;
   overflow: scroll;
+  margin: 100px;
+  align-items: center;
+  display: flex;
 }
 
 .icon {
-  justify-content: space-between;
+  padding: 25px;
 }
