--- a/src/components/Work/Work.module.css
+++ b/src/components/Work/Work.module.css
@@ -1,14 +1,25 @@
 .card {
   background-color: rgba(56,112,176, .4);
-  border: 1px solid whitesmoke;
+  border: 1px solid oldlace;
   color: black;
+  padding: 10px;
+  width: 100%;
 }
 
 .cardImgTop {
   width: 100%;
   height: auto;
   vertical-align: middle;
-  object-fit: scale-down;
+  object-fit: cover;
+}
+
+.cardTitle {
+  font-size: 30px;
+  color: black;
+}
+
+.cardText {
+  font-size: 18px;
 }
 
 .cardContainer {
@@ -16,11 +27,11 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 50px;
-  height: auto;
+  justify-content: center;
+  margin: 20px;
+  gap: 20px;
+  overscroll-behavior: none;
+  scroll-behavior: smooth;
 }
 
 #deployed {
