--- a/src/pages/Landing/Landing.module.css
+++ b/src/pages/Landing/Landing.module.css
@@ -8,5 +8,8 @@
   margin: 0;
   height: 100vh;
   width: 100vw;
+  overscroll-behavior: none;
+  scroll-behavior: smooth;
 }
+
 
